[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://sprites/player.png" type="Texture" id=2]
[ext_resource path="res://sprites/light.png" type="Texture" id=3]
[ext_resource path="res://sprites/legs.png" type="Texture" id=4]
[ext_resource path="res://sfx/dark_ambience_loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://sfx/light_ambience_loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://sfx/step_2.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/step_1.wav" type="AudioStream" id=8]
[ext_resource path="res://sfx/step_3.wav" type="AudioStream" id=9]
[ext_resource path="res://sfx/step_4.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "move"
length = 1.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Legs:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_step"
}, {
"args": [  ],
"method": "play_step"
} ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 15.0

[sub_resource type="CircleShape2D" id=2]
radius = 19.0

[node name="Player" type="KinematicBody2D"]
z_index = 2
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Legs" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 2
vframes = 3
frame = 5

[node name="Torso" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Flashlight" type="Light2D" parent="Torso"]
texture = ExtResource( 3 )
mode = 3
shadow_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/move = SubResource( 5 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_mask = 34

[node name="Hitbox" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 2 )

[node name="Camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true

[node name="DarkAmbienceAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -3.0

[node name="LightAmbienceAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0
autoplay = true

[node name="Tween" type="Tween" parent="."]

[node name="Sounds" type="Node2D" parent="."]

[node name="Step1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )

[node name="Step2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )

[node name="Step3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )

[node name="Step4" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )

[connection signal="timeout" from="Timer" to="." method="enemy_spawn"]
[connection signal="area_entered" from="InteractionArea" to="." method="enter_zone"]
[connection signal="area_exited" from="InteractionArea" to="." method="exit_zone"]
[connection signal="finished" from="DarkAmbienceAudio" to="." method="play_dark"]
[connection signal="finished" from="LightAmbienceAudio" to="." method="play_light"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
